Fix wrapping

--- a/_sass/joey.scss
+++ b/_sass/joey.scss
@@ -137,7 +137,7 @@ code, pre, .fig-bg-light {
 
         & > * {
             flex-basis: 200px;
-            min-width: 256px;
+            min-width: 266px;
             flex-grow: 1;
         }
     }
